Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.1.1
-
None
Description
In file included from tools/qcryptographichash.cpp:74:0:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb576bits(unsigned char*, const unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:348:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb832bits(unsigned char*, const unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:364:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb1024bits(unsigned char*, const unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:380:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb1088bits(unsigned char*, const unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:396:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb1152bits(unsigned char*, const unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:412:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb1344bits(unsigned char*, const unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:428:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakAbsorb(unsigned char*, const unsigned char*, unsigned int)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:443:50: error: ‘fromBytesToWord’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakExtract1024bits(const unsigned char*, unsigned char*)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:467:62: error: ‘fromWordToBytes’ was not declared in this scope
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c: In function ‘void KeccakExtract(const unsigned char*, unsigned char*, unsigned int)’:
tools/../../3rdparty/sha3/KeccakF-1600-opt64.c:486:62: error: ‘fromWordToBytes’ was not declared in this scope
make[3]: *** [.obj/release-shared/qcryptographichash.o] Error 1
The attached patch fixes the problem.
Attachments
Issue Links
- relates to
-
QTBUG-35218 Qt still supports PowerPC?
-
- Closed
-